[package]
name = "arpack"
version = "0.0.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Safe Rust wrapper around ARPACK-NG"
documentation = "https://docs.rs/arpack"
keywords = ["eigenvalue", "eigensolver", "arpack", "lanczos", "arnoldi"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
arpack-sys = { path = "../arpack-sys", version = "0.0.2" }
num-complex = "0.4"

[dev-dependencies]
num-complex = "0.4"
